# brave-core

./: .sonarcloud.properties  jest.config.js  package-lock.json  package.json  sonarcloud.properties
.github/workflows/: CI-tests.yml  greetings.yml
browser/: BUILD.gn  brave_content_browser_client.cc
browser/brave_rewards/: checkout_dialog.cc
browser/ephemeral_storage/: ephemeral_storage_qa_browsertest.cc
browser/infobars/: ipfs_infobar_delegate.cc
browser/resources/: resource_ids
browser/resources/settings/brave_default_extensions_page/: brave_default_extensions_browser_proxy.js  (+2 more)
browser/ui/: BUILD.gn
browser/ui/webui/: brave_web_ui_controller_factory.cc  brave_webui_source.cc
chromium_src/chrome/browser/: about_flags.cc  flag_descriptions.cc  flag_descriptions.h
chromium_src/net/base/: lookup_string_in_fixed_set.cc
common/: webui_url_constants.cc  webui_url_constants.h
components/brave_ads/browser/: ads_service.h
components/brave_rewards/browser/: rewards_service_impl.cc
components/brave_shields/browser/: BUILD.gn  domain_blocked_controller_client.cc  domain_blocked_controller_client.h  domain_blocked_navigation_throttle.cc  domain_blocked_page.cc  domain_blocked_tab_storage.h
components/ipfs_onboarding_ui/: BUILD.gn  ipfs_onboarding.html  ipfs_onboarding.tsx
components/resources/: BUILD.gn  brave_components_resources.grd  brave_components_strings.grd
components/unstoppable_domains/: BUILD.gn
components/unstoppable_domains/resources/: unstoppable_domains_interstitial.js
patches/: net-BUILD.gn.patch  net-dns-dns_transaction.cc.patch
(+11 files in other folders)
